--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "@playwright/test": "^1.56.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14"
   },
   "browserslist": {
